# ISC-proyecto

./: .gitignore  myscript.py  pruebas.csv  pruebas.py  telemetry_simulation.py
Assets/: Patient.prefab
Assets/Editor/: GAgentEditor.cs
Assets/Fonts/: NotoColorEmoji_WindowsCompatible Color.asset
Assets/Prefab/: AdmissionsAgent.prefab  Doctor 1.prefab  Doctor 2.prefab  Nurse 1.prefab  Nurse.prefab  Patient 1.prefab  Patient.prefab
Assets/Scenes/: BasicWorkingHospital.unity  Demo 1.unity  Demo.unity  Menu.unity  SampleScene.unity
Assets/ScriptableObject/: Register.asset  isTreated.asset  isWaiting.asset
Assets/Scripts/: Billboard.cs  CameraSwitcher.cs  ChatBubble.cs  DoorTrigger.cs  DynamicQueueLayout.cs  FreeCamera.cs  GameManager.cs  GetPatient.cs  GetTreated.cs  GoHome.cs  GoToCubicle.cs  GoToHospital.cs  GoToWaitingRoom.cs  LookAtTarget.cs  MainMenu.cs  MinHeap.cs  Nurse.cs  Patient.cs  Register.cs  Rest.cs  Spawn.cs  UpdateWorld.cs
Assets/Settings/: High_PipelineAsset.asset  (+5 more)
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
TelemetryPy/: README.md  aggregated_results.csv  doctors_patients.csv  main.py  patients_priority.csv  patients_timeline.csv  pyproject.toml
TelemetryPy/Mockup project/: dynamic_graphic_v1.py
TelemetryPy/Real time/: main.py
TelemetryPy/Reporting/: aggregated_results.csv  aggregator.py  doctors_patients.csv  main.py  patients_priority.csv  patients_timeline.csv  streamlit.py  telemetry_simulation.py
TelemetryPy/Test/: dynamic_graphic_v1.py
(+449 files in other folders)
