[project]
name = "telemetrypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyqtgraph>=0.14.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
